<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IguanaPro PreAlpha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_screen">Unknown Text Placement</string>
    <string name="username">User Name: </string>
    <string name="login">LOGIN</string>
    <string name="edit_message">Enter a message</string>
    <string name="action_search">Search Music</string>
    <string name="title_activity_settings">IGUANA GUTS</string>
    <string name="IguanaGutz">Iguana Guts and Settings</string>
    <string name="About">Who Is This &quot;IGUANA&quot; Anyway?</string>
    <string name="title_activity_about">About The Iguana</string>
    <string name="title_activity_splash">Iguana PreAlpha</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_screen">Truly you have a dassaling intellect if you have gotten this far!</string>
    <string name="title_activity_iguana_lounge">Iguana Lounge: See Friend\'s Activity</string>
    <string name="display_friends">Display Friends</string>
    <string name="delete_ig">Delete All Stored Usernames</string>
    <string name="show_username">Show Username</string>

</resources>
